# stdex

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/stdex/: allocator.h  allocator_report.h  array_string.h  auto_array.h  binary_set.h  binary_vector.h  const_binary_vector.h  const_string.h  const_string2.h  const_string2_holder.h  const_string2_holder_none.h  const_string_helper.h  const_string_holder.h  const_string_holder_local.h  const_string_holder_none.h  container_reader.h  container_writer.h  dynamic_array.h  exception.h  function_traits.h  hash.h  heap_array.h  holder_ptr.h  ini.h  intrusive_algorithm.h  intrusive_derived_ptr.h  intrusive_duplex_tree.h  intrusive_linked.h  intrusive_linked_ptr.h  intrusive_list.h  intrusive_list_ptr.h  intrusive_ptr.h  intrusive_ptr_base.h  intrusive_ptr_config.h  intrusive_ptr_scope.h  intrusive_ptr_view.h  intrusive_slug.h  intrusive_slug_linked.h  intrusive_slug_linked_ptr.h  intrusive_slug_linked_tag.h  (+33 more)
solution/: stdex.sln  stdex.vcxproj
src/: allocator.cpp  allocator_helper.h  allocator_report.cpp  allocator_threadsafe.cpp  const_string.cpp  const_string2.cpp  const_string2_holder.cpp  const_string2_holder_none.cpp  const_string_holder.cpp  const_string_holder_local.cpp  const_string_holder_none.cpp  exception.cpp  ini.cpp  memory_cache.cpp  memorycopy.cpp  sha1.cpp  stack.cpp  thread_guard.cpp  thread_guard_scope.cpp  xml_sax_parser.cpp
trunk/include/stdex/: allocator.h  array_string.h  binary_set.h  binary_vector.h  const_string.h  const_string_holder.h  const_string_holder_local.h  exception.h  hash.h  holder_ptr.h  ini.h  intrusive_algorithm.h  intrusive_duplex_tree.h  intrusive_linked.h  intrusive_list.h  intrusive_ptr.h  intrusive_ptr_base.h  intrusive_slug.h  intrusive_slug_linked.h  intrusive_slug_list.h  intrusive_slug_list_size.h  intrusive_splay_tree.h  intrusive_tree.h  memory_reader.h  memorycopy.h  pool.h  queue.h  static_array.h  stl_allocator.h  stl_allocator_threadsafe.h  stl_string.h  stl_vector.h  unchecked_array_iterator.h  xml_sax_parser.h
trunk/solution/: stdex.sln  stdex.vcxproj
trunk/src/: allocator.cpp  allocator_helper.h  allocator_threadsafe.cpp  const_string.cpp  const_string_holder.cpp  const_string_holder_local.cpp  const_string_holder_none.cpp  exception.cpp  ini.cpp  memory_cache.cpp  memorycopy.cpp
